<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/bgPrimary"
    tools:context=".MainActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@drawable/bg_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tugas_hari_raya"
            android:textSize="30sp"
            android:textColor="#ffff"
            android:fontFamily="@font/mmedium"
            app:layout_constraintTop_toTopOf="@id/view1"
            app:layout_constraintBottom_toBottomOf="@+id/view1"
            app:layout_constraintStart_toStartOf="@+id/view1"
            app:layout_constraintEnd_toEndOf="@+id/view1"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp" app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintVertical_bias="0.155"/>


        <Button
            android:id="@+id/buttonprofil"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/mlight"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:text="Simple Mode"
            android:textColor="#ffff"
            app:layout_constraintEnd_toEndOf="@+id/view1"
            app:layout_constraintStart_toStartOf="@+id/view1"
            app:layout_constraintTop_toBottomOf="@+id/text1" />


        <LinearLayout
            android:id="@+id/linearlayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:paddingBottom="30dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonprofil"
            tools:layout_editor_absoluteX="12dp">


            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_box"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/tugas_1"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/viewline2"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/text1"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tugas1"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/mmedium"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp"
                    android:text="@string/cek_yuk"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_box"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/tugas_2"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/viewline3"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/text2"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/tugas2"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/mmedium"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp"
                    android:text="@string/cek_yuk"
                    android:textSize="16sp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:background="@drawable/bg_box"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/tugas_3"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/viewline4"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/text3"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tugas3"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/mmedium"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp"
                    android:text="@string/cek_yuk"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bg_box"
                android:orientation="vertical"
                android:paddingStart="24dp"
                android:paddingEnd="24dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/tugas_4"
                    android:textSize="24sp" />

                <View
                    android:id="@+id/viewline5"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="10dp"
                    android:background="#EDEDED" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/text4"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/tugas4"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="end"
                    android:layout_marginBottom="30dp"
                    android:fontFamily="@font/mmedium"
                    android:paddingStart="14dp"
                    android:paddingEnd="0dp"
                    android:text="@string/cek_yuk"
                    android:textSize="16sp" />

            </LinearLayout>


        </LinearLayout>



    </android.support.constraint.ConstraintLayout>

</ScrollView>