<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tugas_satuAct">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="310dp"
        android:background="@drawable/bg_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <TextView
        android:id="@+id/tugas_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/mregular"
        android:text="@string/mencetak_nilai_random"
        android:textAlignment="center"
        android:textColor="#FFFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:background="#EDEDED"
        app:layout_constraintTop_toBottomOf="@id/tugas_1"/>

                <EditText
                    android:id="@+id/et_min"
                    android:paddingStart="24dp"
                    android:paddingEnd="24dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/bg_boxbtn"
                    android:hint="@string/masukkan_nilai_minimal"
                    app:layout_constraintTop_toBottomOf="@id/line1"/>

            <EditText
                android:id="@+id/et_max"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_boxbtn"
                android:hint="@string/masukkan_nilai_maksimal"
                app:layout_constraintTop_toBottomOf="@id/et_min"/>


    <Button
        android:id="@+id/btn_hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginTop="24dp"
        android:text="Generate"
        android:textColor="#fff"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/mregular"
        app:layout_constraintTop_toBottomOf="@id/et_max"/>


    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:textSize="30dp"
        android:gravity="center"
        android:textColor="#ffff"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/mregular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view3"
        android:text="Hasil"/>



</android.support.constraint.ConstraintLayout>