<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tugas_tigaAct">

        <View
            android:id="@+id/view_bg"
            android:layout_width="match_parent"
            android:layout_height="310dp"
            android:background="@drawable/bg_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />



        <TextView
            android:id="@+id/tugas_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/mregular"
            android:text="@string/mencetak_nilai_fpb"
            android:textAlignment="center"
            android:textColor="#FFFF"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:background="#EDEDED"
            app:layout_constraintTop_toBottomOf="@id/tugas_3"/>

        <EditText
            android:id="@+id/et_nilai_1"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_boxbtn"
            android:hint="@string/masukkan_angka_pertama"
            app:layout_constraintTop_toBottomOf="@id/line2"/>

        <EditText
            android:id="@+id/et_nilai_2"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_boxbtn"
            android:hint="@string/masukkan_angka_kedua"
            app:layout_constraintTop_toBottomOf="@id/et_nilai_1"/>


        <Button
            android:id="@+id/btn_fpb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginTop="24dp"
            android:text="Generate"
            android:textColor="#fff"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/mregular"
            app:layout_constraintTop_toBottomOf="@id/et_nilai_2"/>


        <TextView
            android:id="@+id/hasil_fpb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_button"
            android:fontFamily="@font/mregular"
            android:gravity="center"
            android:text="Hasil"
            android:textColor="#ffff"
            android:textSize="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_bg" />


</android.support.constraint.ConstraintLayout>